# 100-exercises-to-learn-rust

./: Cargo.toml
exercises/02_basic_calculator/03_if_else/src/: lib.rs
exercises/02_basic_calculator/05_factorial/src/: lib.rs
exercises/02_basic_calculator/06_while/src/: lib.rs
exercises/03_ticket_v1/01_struct/src/: lib.rs
exercises/03_ticket_v1/02_validation/src/: lib.rs
exercises/03_ticket_v1/05_encapsulation/src/: lib.rs
exercises/03_ticket_v1/07_setters/src/: lib.rs
exercises/03_ticket_v1/12_outro/src/: lib.rs
exercises/04_traits/01_trait/src/: lib.rs
exercises/04_traits/08_sized/src/: lib.rs
exercises/04_traits/09_from/src/: lib.rs
exercises/04_traits/10_assoc_vs_generic/src/: lib.rs
exercises/04_traits/12_copy/src/: lib.rs
exercises/04_traits/13_drop/src/: lib.rs
exercises/04_traits/14_outro/src/: lib.rs
exercises/05_ticket_v2/02_match/src/: lib.rs
exercises/05_ticket_v2/03_variants_with_data/src/: lib.rs
exercises/05_ticket_v2/07_unwrap/src/: lib.rs
exercises/05_ticket_v2/08_error_enums/src/: lib.rs
exercises/05_ticket_v2/09_error_trait/src/: lib.rs
exercises/05_ticket_v2/12_thiserror/src/: lib.rs
exercises/05_ticket_v2/13_try_from/src/: lib.rs
exercises/05_ticket_v2/14_source/src/: lib.rs
exercises/05_ticket_v2/15_outro/src/: description.rs  status.rs  title.rs
exercises/08_futures/08_outro/: Cargo.toml
exercises/08_futures/08_outro/src/: lib.rs
exercises/08_futures/08_outro/src/http/: mod.rs  request.rs  router.rs
exercises/08_futures/08_outro/src/ticket/: data.rs  description.rs  mod.rs  store.rs  title.rs
(+21 files in other folders)
