[package]
name = "outro_08"
version = "0.1.0"
edition = "2021"
default-run = "runserver"

[dependencies]
tokio = { version = "1", features = ["full"] }
httparse = "1.8.0"
thiserror = "1.0.59"
serde = { version = "1.0.203",  features = ["derive"] }
serde_json = "1.0.117"
lazy_static = "1.4.0"
http = "1.1.0"
common = { path = "../../../helpers/common" }

[lib]
name = "http_server"
